src/sass/_game.scss
.game {
  text-align: center;
  width: 100%;
  background: #eee;
  padding: 2em 0;

  .symbol {
    font-size: 96px;
    font-family: 'Moon Light';
    vertical-align: top;
    line-height: 72px;
    margin: 0 0.3em;
  }

  .plus {
    display: inline-block;
    line-height: 72px;
  }


  .equals {
    display: block;
    line-height: 72px;
  }
}

.box {
  width: 72px;
  height: 72px;
  border-radius: 0.3em;
  display: inline-block;
}

.box-option {
  width: 50px;
  height: 50px;
  border-radius: 25px;
  display: inline-block;
  margin: 0 10px; 
}

.box-option:hover {
  -webkit-animation-name: hvr-buzz;
  animation-name: hvr-buzz;
  -webkit-animation-duration: 0.15s;
  animation-duration: 0.15s;
  -webkit-animation-timing-function: linear;
  animation-timing-function: linear;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
}

.time {
  margin-bottom: 0.5em;
  font-size: 48px;
}

.time-danger {
  color: #C0392B;
  -moz-transition: all 0.5s ease-in-out;
  -webkit-transition: all 0.5s ease-in-out;
  -o-transition: all 0.5s ease-in-out;
  -ms-transition: all 0.5s ease-in-out;
  transition: all 0.5s ease-in-out; 
  -moz-animation: blink normal 0.8s infinite ease-in-out; /* Firefox */
  -webkit-animation: blink normal 0.8s infinite ease-in-out; /* Webkit */
  -ms-animation: blink normal 0.8s infinite ease-in-out; /* IE */
  animation: blink normal 0.8s infinite ease-in-out; /* Opera */
}

.background-fade {
  -moz-transition: background 0.3s ease-in-out;
  -webkit-transition: background 0.3s ease-in-out;
  -o-transition: background 0.3s ease-in-out;
  -ms-transition: background 0.3s ease-in-out;
  transition: background 0.3s ease-in-out;
}


@media (min-width: 520px) {
  .box {
    width: 120px;
    height: 120px;
  }

  .game {
    .plus {
      line-height: 120px;
    }
  }

  .box-option {
    width: 100px;
    height: 100px;
    border-radius: 50px;
  }

  .intro {
    div {
      line-height: 32px;
    }
  }
}

